[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-iterator = "0.7.0"
itertools = "0.10.1"
ascii = "1.0.0"
num_enum = "0.5.3"
bindings = { path = "../bindings"}
shared = { path = "../shared" }
iced_winit = { git = "https://github.com/hecrj/iced", branch = "0.4"}
iced_wgpu = { git = "https://github.com/hecrj/iced", branch = "0.4"}
iced = { git = "https://github.com/hecrj/iced" , branch = "0.4"}
